--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,216 @@
-.App {
+html {
+  background-color: #ffffff;
+}
+
+a,
+a:link,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
+  color: #000000;
+}
+
+.navbar-grid {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
+  font-family: "Laila", serif;
+  font-size: 32px;
+  position: sticky;
+  color: #000000;
+}
+
+.grid-1 {
+  font-weight: bold;
+}
+
+.grid-2,
+.grid-3,
+.grid-4,
+.grid-5,
+.grid-6,
+.grid-7,
+.grid-8,
+.grid-9,
+.grid-10,
+.grid-11,
+.grid-12 {
+  padding-top: 80px;
+  text-decoration: none;
+  transition: text-decoration 0.5s ease;
+}
+
+.logo-text {
+  text-decoration: none;
+  transition: text-decoration 0.5s ease;
+}
+
+.logo-text:hover {
+  text-decoration: underline;
+  text-decoration-color: #e27d5f;
+}
+
+.grid-3-text,
+.grid-5-text,
+.grid-7-text,
+.grid-9-text {
+  text-decoration: none;
+  transition: text-decoration 0.5s ease;
+}
+
+.grid-3-text:hover,
+.grid-5-text:hover,
+.grid-7-text:hover,
+.grid-9-text:hover {
+  text-decoration: underline;
+  text-decoration-color: #e27d5f;
+}
+
+.btn-raised:hover {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+  box-shadow: inset 0 0 0 2em #e27d5f;
+  color:white;
+}
+
+.btn-raised:focus{
+  box-shadow: inset 0 0 0 2em #ffffff;
+  color:#e27d5f;
+}
+
+.btn-raised {
+  color: #e27d5f;
+  transition: 0.25s;
+  background: none;
+  border: 2px solid;
+  border-radius: 45px;
+  font: inherit;
+  padding-left: 16px;
+  padding-right: 16px;
+  /* background-color: #e27d5f;
+  border-radius: 45px;
+  border-color: #e27d5f;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: absolute;
+  padding-left: 16px;
+  padding-right: 16px; */
 }
 
-.App-link {
-  color: #61dafb;
+.card-component {
+  background-color: rgba(236, 229, 221, 1);
+  border-radius: 30px;
+  box-shadow: 0px 4px 4px #00000040;
+  position: absolute;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.CarouselComponent {
+  box-shadow: 0px 4px 4px #00000040;
+}
+
+.first-slide-section,
+.second-slide-section,
+.third-slide-section {
+  background-color: hsla(0, 10%, 80%, 0.8);
+  color: black;
+  border-radius: 100px;
+}
+
+.first-slide-text,
+.second-slide-text,
+.third-slide-text {
+  color: black;
+  opacity: 100%;
+}
+
+#banner-caption {
+  font-size: 32px;
+  font-weight: bold;
+  font-family: "Laila", serif;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+#banner-component {
+  padding-left: 25%;
+  background-color: #ffffff;
+  border-radius: 30px;
+  box-shadow: 0px 4px 4px #52525240;
+  position: absolute;
+  object-fit: contain;
+}
+
+#grid-2-img,
+#grid-4-img {
+  padding-top: 10%;
+  object-fit: fill;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.reveal {
+  background-color: #ffffff;
+  background-color: #ffffff;
+  color: black;
+  text-align: center;
+  opacity: 0;
+
+  /* Add animation properties */
+  animation: fadeIn 2s ease-in;
+}
+
+@keyframes fadeInUp {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translateY(0%);
+    opacity: 1;
   }
+}
+
+.fadeInUp-animation {
+  animation: 3s fadeInUp;
+}
+
+.imgservices-1{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 30px;
+  box-shadow: 0px 4px 4px #00000040;
+}
+
+.fadeInUp-animation-main-content{
+  color: black;
+  animation: 4.5s fadeInUp;
+}
+
+.mouseIconHref{
+  animation: 2s fadeInUp;
+}
+
+#card-styling{
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+::-webkit-scrollbar{ 
+  width: 8px;
+}
+
+::-webkit-scrollbar-track{
+  background: transparent;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #e27d5f;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background: #e27d5fcc;
 }
